Before CodeSandbox Update

--- a/client/src/Selector/selector.scss
+++ b/client/src/Selector/selector.scss
@@ -1,52 +1,128 @@
-.SelectorContainer {  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "poster-one poster-two poster-three"
-    "poster-one poster-two poster-three"
-    "num-one num-two num-three";
-}
+// .flex-center {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+// }
 
-.poster-one { grid-area: poster-one; }
+// .SelectorContainer {
+//   display: flex;
+//   flex-wrap: wrap;
+//   gap: var(--padding-em-2);
+//   padding-inline: var(--padding-em-2);
+//   justify-content: center;
+//   // align-items: center;
+//   background-color: #e9dfd0;
+// }
 
-.poster-two { grid-area: poster-two; }
+// [class^="poster_"] {
+//   position: relative;
+// }
 
-.poster-three { grid-area: poster-three; }
+// [class^="poster__image_"] {
+//   width: 100%;
+//   max-width: 400px;
+//   height: auto;
+//   border-radius: .25rem;
+// }
 
-.num-one { grid-area: num-one; }
+// .film-info {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   padding: 2rem;
+//   background-color: #616161e7;
+//   color: #e9dfd0;
+//   opacity: 0;
+//   transition: opacity .95s ease-in-out;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   box-sizing: border-box;
+//   border-radius:.25rem;
 
-.num-two { grid-area: num-two; }
+//    &__title {
+//      font-size :xx-large;
+//      text-align :center
+//    }
 
-.num-three { grid-area: num-three; }
+//    &__details {
+//      display :flex;
+//      justify-content :space-evenly
+//    }
 
-*[class*="rank"] {
-  text-align: center;
-}
+//    &__director,
+//    &__date {
+//      white-space :nowrap
+//    }
+
+//    &__synopsis {
+//      max-width :50ch
+//    }
+// }
+
+// [class^="poster_"]:hover .film-info {
+//    opacity :1
+// }
 
 .SelectorContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: minmax(100px, auto);
+  grid-gap: 1rem;
 }
 
-[class^="poster-"] {
-  position: relative;
+[class^="poster_"] {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  
+  gap: var(--padding-2);
+  padding-inline: var(--padding-2);
+}
 
-  .film-info {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.8);
-    color: white;
-    padding: 10px;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
+[class^="poster__image_"] {
+  max-width: 100%;
+  // max-width: 400px;
+  max-height: 100%;
+  border-radius: 0.25rem;
+}
+
+.film-info {
+  background-color: var(--clr-secondary-500);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 2.5em .8em;
+  gap: 1.5em;
+
+  border-radius: .65rem;
+
+  &__title {
+    line-height: 1;
+    text-align: left;
   }
 
-  &:hover .film-info {
-    opacity: 1;
+  &__details {
+    display: flex;
+    //  flex-grow: 1;
+    //  flex-basis: 1;
+    min-width: 100%;
+    justify-content: space-between;
+    gap: var(--padding-2);
   }
+
+  &__director,
+  &__date {
+    white-space: nowrap;
+  }
+
+  //  &__synopsis {
+  //    max-width :50ch
+  //  }
 }
