--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,21 +3,22 @@
   --clr-primary-750: #434343;
   --clr-secondary-500: #616161;
 
+  --clr-secondary-850: #5c5c5c;
+  --clr-secondary-750: #525252;
+  --clr-secondary-250: hsl(36, 36%, 92%);
+
   // Font Family
-  --ff-primary: 'Sarabun', sans-serif;;
-  --ff-accent: 'Lato', sans-serif;
-  --ff-secondary: 'Lato', sans-serif;
-  
+  --ff-600: "Sarabun", sans-serif;
+  --ff-400: "Lato", sans-serif;
+
   // Old Font Family
   // --ff-primary: "Hind Siliguri", sans-serif;
   // --ff-accent: "Mukta", sans-serif;
   // --ff-secondary: "Sarala", sans-serif;
 
-
   // Font Family Asigned
-  --ff-body: var(--ff-secondary);
-  --ff-sub: var(--ff-accent);
-  --ff-title: var(--ff-primary);
+  --ff-primary: var(--ff-600);
+  --ff-secondary: var(--ff-400);
 
   // Font Weight
   --fw-skinny: 100;
@@ -37,36 +38,87 @@
   --padding-em-2: calc(2 * var(--padding-em-1));
   --padding-em-3: calc(3 * var(--padding-em-1));
 
-  --fs-200: 1.2rem;
-  --fs-400: 1.8rem;
-  --fs-600: 3rem;
-  --fs-800: 8rem;
+  --fs-200: 1.2rem; //h6 #light
+  --fs-300: 1.6rem; //h5 #secondary
+  --fs-400: 2rem; //h4 #primary
+  --fs-600: 3rem; //h2 #ranking
+  --fs-800: 8rem; //h1 #heavy
+
+  // --fs-200: 1.6rem; //h6 #light
+  // --fs-250: 1.866rem; //inbetweener
+  // --fs-300: 2.133rem; //h5 #secondary
+  // --fs-400: 2.8rem;   //h4 #primary
+  // --fs-600: 4.232rem;   //h2 #ranking
+  // --fs-800: 8.465rem;   //h1 #heavy
+
+  --fs-200: 1.2rem; //h6  #light
+  --fs-300: 1.6rem; //h5  #secondary
+  --fs-400: 2.1rem; //h4  #primary
+  --fs-600: 3.175rem; //h2  #ranking
+  --fs-900: 6.35rem; //h1  #heavy
+
+  // --fs-200: 2.8rem;     //h6  #light
+  // --fs-300: 3.733rem;   //h5  #secondary
+  // --fs-400: 4.9rem;   //h4  #primary
+  // --fs-600: 7.407rem;   //h2  #ranking
+  // --fs-900: 14.815rem;  //h1  #heavy
+
+  // ratio: 1.333
+
+  // --fs-200: 2.4rem;
+  // --fs-300: 3.3325rem;
+  // --fs-400: 4.565525rem;
+  // --fs-600: 7.39815rem;
+  // --fs-900: 16.46255rem;
 
   // experimental clamp transitions
-  --fs-200: clamp(1.2rem, -3.3rem + 6vw, 1.5rem);
-  --fs-400: clamp(1.8rem, -5.7rem + 10vw, 2.3rem);
-  --fs-600: clamp(3rem, -9rem + 16vw, 3.8rem);
+  // --fs-200: clamp(1.2rem, -3.3rem + 6vw, 1.5rem);
+  // --fs-400: clamp(1.8rem, -5.7rem + 10vw, 2.3rem);
+  // --fs-600: clamp(3rem, -9rem + 16vw, 3.8rem);
   // --fs-800: clamp(5rem, -14.5rem + 26vw, 6.3rem);
 
   // Font Size
-  --fs-button: var(--fs-200);
-  --fs-body: var(--fs-400);
-  --fs-sub: var(--fs-600);
-  --fs-title: var(--fs-800);
+  // --fs-button: var(--fs-200);
+  // --fs-body: var(--fs-400);
+  // --fs-sub: var(--fs-600);
+  // --fs-title: var(--fs-800);
+
+  --fs-light: var(--fs-200);
+  --fs-secondary: var(--fs-300);
+  --fs-primary: var(--fs-400);
+  --fs-ranking: var(--fs-600);
+  --fs-heavy: var(--fs-900);
 
   // --NavDynamicHeight: 0;
 }
 // MediaQueries
-$media-250: 30em;
-$media-300: 35em;
-$media-350: 40.25em;
-$media-400: 50em;
-$media-600: 60em;
-$media-800: 84em;
+// $media-250: 30em;
+// $media-300: 35em;
+// $media-350: 40.25em;
+// $media-400: 50em;
+// $media-600: 60em;
+// $media-800: 84em;
 
 //Reset
 html {
   font-size: 62.5%;
+}
+/* 10px @ 320px increasing to 24px @ 1920px */
+@media (min-width: 320px) {
+  :root {
+    font-size: calc(0.625rem + (24 - 10) * ((100vw - 320px) / (1920 - 320)));
+    /* Note: The calc base value (0.625rem) MUST be stated in REM to maintain accessibility */
+    /* Where: calc = min_font_size_in_rem + (max_font_size - min_font_size) * ((100vw - min_viewport_including_px_unit) / (max_viewport - min_viewport)) */
+
+    /* Safari resize fix */
+    min-height: 0vw;
+  }
+}
+/* Prevent scaling beyond this breakpoint */
+@media (min-width: 1920px) {
+  :root {
+    font-size: 24px;
+  }
 }
 
 body,
@@ -78,9 +130,15 @@ html {
   min-height: 100vh;
 }
 
+*,
 ::before,
 ::after {
   box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
 ul[role="list"],
@@ -92,10 +150,26 @@ html:focus-within {
   scroll-behavior: smooth;
 }
 
-* {
-  margin: 0;
-  padding: 0;
+input,
+button,
+textarea,
+select {
   font: inherit;
+}
+
+// p,
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6 {
+//   // overflow-wrap: break-word;
+// }
+
+button {
+  all: initial;
+  color: var(--clr-primary-250);
 }
 
 body {
@@ -114,9 +188,11 @@ body {
 
 img,
 picture,
+video,
+canvas,
 svg {
-  max-width: 100%;
   display: block;
+  max-width: 100%;
 }
 
 a:hover,
@@ -125,7 +201,7 @@ a:link,
 a:active,
 a {
   text-decoration: none;
-  color: var(--clr-neutral-400);
+  color: var(--clr-primary-250);
   cursor: pointer;
 }
 
@@ -146,43 +222,72 @@ a {
 // ---------------
 // General Styling
 // ---------------
+.light {
+  font-size: var(--fs-light);
+  font-weight: var(--fw-regular);
+  font-family: var(--ff-secondary);
+  text-transform: capitalize;
+}
 
-.base-button {
-  font-size: var(--fs-body);
-  font-weight: var(--fw-bold);
-  font-family: var(--ff-sub);
+.button {
+  font-size: var(--fs-secondary);
+  font-family: var(--ff-secondary);
+  font-weight: var(--fw-regular);
+
   color: var(--clr-primary-250);
   background-color: var(--clr-secondary-500);
+
+  padding-inline: 0.7em;
+  padding-block: 0.35em 0.45em;
+
+  border-radius: 0.7em;
+  letter-spacing: 0.05em;
+
+  text-transform: lowercase;
+  cursor: pointer;
+}
+.button:hover {
+  box-shadow: 0.0625em 0.125em 0.3125em 0em rgba(0, 0, 0, 0.33);
+  -webkit-box-shadow: 0.0625em 0.125em 0.3125em 0em rgba(0, 0, 0, 0.33);
+  -moz-box-shadow: 0.0625em 0.125em 0.3125em 0em rgba(0, 0, 0, 0.33);
+}
+.button:active {
+  transform: scale(0.95);
 }
 
-.base-body {
-  font-size: var(--fs-body);
+.secondary {
+  font-size: var(--fs-secondary);
   font-weight: var(--fw-skinny);
-  font-family: var(--ff-body);
-  color: var(--clr-primary-250);
+  font-family: var(--ff-secondary);
 }
-
-.base-sub {
-  font-size: var(--fs-sub);
+.primary {
+  font-size: var(--fs-primary);
   font-weight: var(--fw-regular);
-  font-family: var(--ff-sub);
-  color: var(--clr-primary-250);
+  font-family: var(--ff-secondary);
+}
+.ranking {
+  font-size: var(--fs-ranking);
+  font-weight: var(--fw-regular);
+  font-family: var(--ff-secondary);
+}
+.heavy {
+  font-size: var(--fs-heavy);
+  font-weight: var(--fw-bold);
+  font-family: var(--ff-primary);
+  line-height: 1;
 }
 
-.base-title {
-  font-size: var(--fs-title);
-  font-weight: var(--fw-skinny);
-  font-family: var(--ff-title);
-  color: var(--clr-primary-250);
+.lowercase {
+  text-transform: lowercase;
 }
-
-.style-button {
-  padding-inline: var(--padding-3);
-  border-radius: 1.5rem;
+.uppercase {
+  text-transform: uppercase;
+}
+.capitalize {
+  text-transform: capitalize;
 }
 
 // flex utility
-
 .full-vh {
   min-height: 100vh;
   min-height: 100dvh;
@@ -194,16 +299,14 @@ a {
   justify-content: center;
   align-items: center;
 }
+.flex-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+}
 
-// .flex-footer {
-//   // display: flex;
-//   // flex-grow: 1;
-//   // flex-direction: column;
-//   // justify-content: flex-end;
-//   // align-items: stretch;
-// }
-
-.text-center{
+.text-center {
   text-align: center;
 }
 
@@ -215,32 +318,30 @@ a {
   padding-block: var(--padding-3);
 }
 
-// -------------
-// Media Queries
-// -------------
-
-@media (min-width: 50em) and (max-width: 64em) {
-  :root {
-    --fs-200: 1.5rem;
-    --fs-400: 2.3rem;
-    --fs-600: 3.8rem;
-    --fs-800: 6.3rem;
-
-    --fs-200: clamp(1.5rem, -0.448rem + 2vw, 1.6rem);
-    --fs-400: clamp(2.3rem, 0.352rem + 2vw, 2.4rem);
-    --fs-600: clamp(3.8rem, -2.044rem + 6vw, 4.1rem);
-    --fs-800: clamp(6.3rem, -3.44rem + 10vw, 6.8rem);
-  }
+.p-wrap {
+  max-width: 25ch;
 }
 
-@media (min-width: 64em) {
-  :root {
-    --fs-200: 1.6rem;
-    --fs-400: 2.4rem;
-    --fs-600: 4.1rem;
-    --fs-800: 6.8rem;
-    --fs-800: 15rem;
-  }
+.title-wrap {
+  max-width: 15ch;
+  word-wrap: break-word;
+  white-space: normal;
+}
+
+.p-preview-text {
+
+  display: block;
+  display: -webkit-box;
+  /*! autoprefixer: off */
+  -webkit-box-orient: vertical;
+  max-width: minmax(20em, 25ch);
+  font-size: 20px;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  
+  text-overflow: ellipsis;
+  word-break: break-all;
 }
 
 // ---------------
@@ -270,14 +371,11 @@ a {
 }
 
 // Font Family
-.ff-title {
-  font-family: var(--ff-title);
+.ff-primary {
+  font-family: var(--ff-primary);
 }
-.ff-sub {
-  font-family: var(--ff-sub);
-}
-.ff-body {
-  font-family: var(--ff-body);
+.ff-secondary {
+  font-family: var(--ff-secondary);
 }
 
 // Font Weight
@@ -292,17 +390,20 @@ a {
 }
 
 // Font Size
-.fs-button {
-  font-size: var(--fs-button);
+.fs-light {
+  font-size: var(--fs-light);
 }
-.fs-body {
-  font-size: var(--fs-body);
+.fs-secondary {
+  font-size: var(--fs-secondary);
 }
-.fs-sub {
-  font-size: var(--fs-sub);
+.fs-primary {
+  font-size: var(--fs-primary);
 }
-.fs-title {
-  font-size: var(--fs-title);
+.fs-ranking {
+  font-size: var(--fs-ranking);
+}
+.fs-heavy {
+  font-size: var(--fs-heavy);
 }
 
 // Cursor Type
