--- a/client/src/Selector/selector.scss
+++ b/client/src/Selector/selector.scss
@@ -1,94 +1,65 @@
-// .flex-center {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-// }
-
-// .SelectorContainer {
-//   display: flex;
-//   flex-wrap: wrap;
-//   gap: var(--padding-em-2);
-//   padding-inline: var(--padding-em-2);
-//   justify-content: center;
-//   // align-items: center;
-//   background-color: #e9dfd0;
-// }
-
-// [class^="poster_"] {
-//   position: relative;
-// }
-
-// [class^="poster__image_"] {
-//   width: 100%;
-//   max-width: 400px;
-//   height: auto;
-//   border-radius: .25rem;
-// }
-
-// .film-info {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   padding: 2rem;
-//   background-color: #616161e7;
-//   color: #e9dfd0;
-//   opacity: 0;
-//   transition: opacity .95s ease-in-out;
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   box-sizing: border-box;
-//   border-radius:.25rem;
-
-//    &__title {
-//      font-size :xx-large;
-//      text-align :center
-//    }
-
-//    &__details {
-//      display :flex;
-//      justify-content :space-evenly
-//    }
-
-//    &__director,
-//    &__date {
-//      white-space :nowrap
-//    }
-
-//    &__synopsis {
-//      max-width :50ch
-//    }
-// }
-
-// [class^="poster_"]:hover .film-info {
-//    opacity :1
-// }
-
 .SelectorContainer {
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: minmax(100px, auto);
-  grid-gap: 1rem;
+  grid-gap: 3em;
+  padding-block: 2em;
+  padding-inline: 2em;
+  // border: red 3px dotted;
 }
 
 [class^="poster_"] {
   display: flex;
   justify-content: center;
   align-items: center;
+
   flex-direction: row;
-  
   gap: var(--padding-2);
+
   padding-inline: var(--padding-2);
 }
 
+[class^="film_option_"] {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+[class^="line_div_"] {
+  background-color: var(--clr-primary-250);
+  border-radius: 50%;
+  height: 1px;
+  margin-bottom: 3em;
+  // min-width: 100%;
+  width:100%;
+}
+.line_div_1 {
+  display: none;
+}
+
+.this_img_container {
+  height: 100%;
+  // width: 99%;
+
+  aspect-ratio: 1/1.5;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  // width: 15rem;
+  border-radius: 0.35rem;
+  border: var(--clr-secondary-750) 0.1rem solid;
+
+  // background-image:url(http://placekitten.com/900/900); background-size:cover;
+}
+
 [class^="poster__image_"] {
-  max-width: 100%;
-  // max-width: 400px;
-  max-height: 100%;
-  border-radius: 0.25rem;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  border: red 3px solid;
 }
 
 .film-info {
@@ -98,14 +69,48 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  padding: 2.5em .8em;
-  gap: 1.5em;
 
-  border-radius: .65rem;
+  padding: 1em 0.8em;
+  gap: 0.5em;
+  width: 45vw;
+  width: clamp(20em, 45vw, 30em);
+
+  border-radius: 0.65rem;
+  overflow: hidden;
+
+  // border: cornflowerblue 2px solid;
 
   &__title {
-    line-height: 1;
+    line-height: 1.2;
     text-align: left;
+
+    white-space: wrap;
+    // overflow: hidden;
+    // text-overflow: ellipsis;
+
+    display: flex;
+    align-items: center;
+
+    display: block;
+    display: -webkit-box;
+    /*! autoprefixer: off */
+    -webkit-box-orient: vertical;
+    max-width: 20em;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+
+    text-overflow: ellipsis;
+    word-break: none;
+
+    text-align: left;
+
+    -webkit-box-align: center;
+    // -webkit-box-pack: center;
+
+    // margin-block: auto;
+
+    // border: mediumseagreen 2px solid;
   }
 
   &__details {
@@ -114,15 +119,56 @@
     //  flex-basis: 1;
     min-width: 100%;
     justify-content: space-between;
-    gap: var(--padding-2);
+    gap: 1em;
+    // background-color: steelblue;
+    white-space: normal;
+    overflow: auto;
+    //  border: mediumseagreen 2px solid;
+    //  flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    // grid-template-rows: .5em;
+    gap: 0px 0.5em;
+    grid-template-areas: "film-director film-year";
   }
 
   &__director,
   &__date {
     white-space: nowrap;
   }
+  &__director {
+    // border: palegreen 2px solid;
+    // grid-area: film-director;
+    min-width: 7ch;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  // &__date {
+  //   border: turquoise 2px solid;
+  //   // grid-area: film-year;
+  // }
 
-  //  &__synopsis {
-  //    max-width :50ch
-  //  }
+  &__synopsis {
+    max-width: 30ch;
+    //  border: chartreuse 2px solid;
+  }
+
+  .two_line_container {
+    min-height: 2.6em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    // border: salmon 2px solid;
+  }
+
+  .four_line_container {
+    min-height: 6.6em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // background-color: greenyellow;
+    // border: salmon 2px solid;
+  }
 }
