--- a/client/src/Selector/selector.scss
+++ b/client/src/Selector/selector.scss
@@ -33,7 +33,6 @@
   border-radius: 50%;
   height: 1px;
   margin-bottom: 3em;
-  // min-width: 100%;
   width: clamp(20em, 100%, 43em);
 }
 .line-div__1 {
@@ -54,7 +53,8 @@
   border-radius: 0.35rem;
   border: var(--clr-secondary-750) 0.1rem solid;
 
-  // background-image:url(http://placekitten.com/900/900); background-size:cover;
+  // background-image:url(http://placekitten.com/900/900);  
+  // background-size:cover;
 }
 
 [class^="film-option__image_"] {
